refactor: code quality